--- a/projects/admin/menu.template
+++ b/projects/admin/menu.template
@@ -1,5 +1,7 @@
 <?php
-$menu_title = get_reportico_config('project_title');
+namespace Reportico;
+
+$menu_title = ReporticoApp::getConfig('project_title');
 $menu = array (
 	array ( "language" => "en_gb", "report" => ".*\.xml", "title" => "<AUTO>" )
 	);
