--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
     "license": "GPL-3.0",
     "require": {
         "php": ">=5.4.0",
-        "smarty/smarty": "2.6.26",
         "setasign/fpdf": "1.7",
         "adodb/adodb-php": "^5.20",
-        "tecnickcom/tcpdf": "^6.2"
+        "tecnickcom/tcpdf": "^6.2",
+        "smarty/smarty": "^3.1"
     },
      "autoload": {
         "psr-4": {
