Fix up of saving admin password based on new config mechanism in ReporticoApp Admin page standardised to same TITLE template definition as other templates

--- a/projects/admin/config.template
+++ b/projects/admin/config.template
@@ -242,7 +242,7 @@ ReporticoApp::setConfig('chart_YAxisColor',ReporticoApp::getConfig('chart_LineCo
 }
 
 
-// Statis Menu Title default to project Title
+// Static Menu Title default to project Title
 ReporticoApp::set('menu_title',ReporticoApp::getConfig('project_title'));
 
 // Vertical centre page main menu, default show all reports in project
