--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "adodb/adodb-php": "^5.20",
         "tecnickcom/tcpdf": "^6.2",
         "smarty/smarty": "^3.1",
-        "monolog/monolog": "^1.23"
+        "monolog/monolog": "^1.23",
+        "twig/twig": "~1.16",
+        "jonnyw/php-phantomjs": "4.6"
     },
      "autoload": {
         "psr-4": {
@@ -29,5 +31,16 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "bin-dir": "bin"
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "PhantomInstaller\\Installer::installPhantomJS"
+        ],
+        "post-update-cmd": [
+            "PhantomInstaller\\Installer::installPhantomJS"
+        ]
+    }
 }
