Fixed twig rendering of HTML elements by using autoescape false

--- a/projects/admin/config.template
+++ b/projects/admin/config.template
@@ -1,5 +1,5 @@
 <?php
-namespace Reportico;
+namespace Reportico\Engine;
 
 // -----------------------------------------------------------------------------
 // -- Reportico -----------------------------------------------------------------
