renamed back to reortico-web

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "reportico/reportico",
+    "name": "reportico-web/reportico",
     "description": "Reportico Open Source PHP report Designer",
     "type": "project",
     "keywords": [
