--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "reportico-web/reportico",
     "version": "5.2",
-    "homepage": "http://www.reportico.org/"
+    "homepage": "http://www.reportico.org/",
     "description": "Reportico Open Source PHP report Designer",
     "type": "project",
     "keywords": [ "report", "reporting" ],
