(#25) PhantomJS requires customization when running in Windows and other Windows customisations

--- a/projects/admin/config.template
+++ b/projects/admin/config.template
@@ -101,7 +101,10 @@ ReporticoApp::setConfig('pdf_pdfFontSize','10');
 
 // Pagination and Zoom default
 ReporticoApp::setConfig('AutoPaginate','None');
-ReporticoApp::setConfig('PdfZoomFactor','0.74');
+if (stripos(PHP_OS, "WIN") !== false) 
+	ReporticoApp::setConfig('PdfZoomFactor','0.98');
+else
+	ReporticoApp::setConfig('PdfZoomFactor','0.74');
 ReporticoApp::setConfig('HtmlZoomFactor','1');
 ReporticoApp::setConfig('PageTitleDisplay','TopOfFirstPage');
 
