Make Reportico engine work well with October CMS Fix Delete Project Facilitate writing of storage files to storage folders only in fraeworks

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "adodb/adodb-php": "^5.20",
+        "reportico/adodb-php": "^5.20",
         "monolog/monolog": "^1.23",
         "twig/twig": "~1.16",
         "jonnyw/php-phantomjs": "4.6"
