--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "adodb/adodb-php": "^5.20",
         "monolog/monolog": "^1.23",
         "twig/twig": "~1.16",
-        "jonnyw/php-phantomjs": "4.6"
+        "jonnyw/php-phantomjs": "4.6",
+        "tecnickcom/tcpdf": "^6.2"
     },
      "autoload": {
         "psr-4": {
