--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "monolog/monolog": "^1.23",
         "twig/twig": "~1.16",
         "jonnyw/php-phantomjs": "4.6",
-        "tecnickcom/tcpdf": "^6.2"
+        "tecnickcom/tcpdf": "^6.2",
+        "szymach/c-pchart": "^3.0"
     },
      "autoload": {
         "psr-4": {
